[gd_scene load_steps=26 format=3 uid="uid://dggiyb6qq2j1k"]

[ext_resource type="Script" path="res://src/shop/shop.gd" id="1_6x6kv"]
[ext_resource type="Texture2D" uid="uid://dg10rlho8i5jr" path="res://src/shop/Assets/Button.png" id="1_gk8fi"]
[ext_resource type="Texture2D" uid="uid://cdhkvodc7a8x7" path="res://src/Weapons/Assets/Icons/FireSword.png" id="2_rwfrm"]
[ext_resource type="Texture2D" uid="uid://5vt7ja5emmim" path="res://src/shop/Assets/v2.png" id="3_ore3v"]
[ext_resource type="FontFile" uid="uid://ch8jrpljohs62" path="res://src/Fonts/American TextC.ttf" id="4_bu623"]
[ext_resource type="PackedScene" uid="uid://dqfspfc0f0ivf" path="res://src/shop/InventorySlot.tscn" id="5_c6320"]

[sub_resource type="Gradient" id="Gradient_7v635"]
colors = PackedColorArray(0.259294, 0.259294, 0.259294, 1, 0.197937, 0.197937, 0.197937, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v80cf"]
gradient = SubResource("Gradient_7v635")
height = 51

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k4c67"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnf11"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6mdk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b6jmc"]
texture = ExtResource("3_ore3v")
modulate_color = Color(0.802166, 0.939878, 0.998279, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n6t2l"]
texture = ExtResource("3_ore3v")
modulate_color = Color(6.257e-07, 0.304661, 0.393445, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_58xa3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kt1kq"]
texture = ExtResource("3_ore3v")
modulate_color = Color(0, 0.305882, 0.392157, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dquav"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ud5t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jltga"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cbg7m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r81lv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rwmh5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_61ljt"]
texture = ExtResource("3_ore3v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rvstr"]
texture = ExtResource("3_ore3v")
modulate_color = Color(0.447059, 0.447059, 0.447059, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8pfog"]
texture = ExtResource("3_ore3v")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q4y7s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Base" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_6x6kv")

[node name="TextureRect" type="TextureRect" parent="Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_v80cf")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuySlots and Stats" type="HBoxContainer" parent="Base/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_k4c67")

[node name="Buy_slots" type="VBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots"]
layout_mode = 2
theme_override_constants/separation = 13
theme_override_styles/separator = SubResource("StyleBoxEmpty_bnf11")

[node name="BuySlot1" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_gk8fi")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.195
anchor_top = 0.195
anchor_right = 0.816
anchor_bottom = 0.818
offset_left = 0.0349998
offset_top = -0.00500107
offset_right = 0.00799561
offset_bottom = -0.0619965
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rwfrm")
expand_mode = 1

[node name="Slot_1_buy" type="Button" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.52
theme_override_styles/focus = SubResource("StyleBoxEmpty_y6mdk")
theme_override_styles/hover = SubResource("StyleBoxTexture_b6jmc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n6t2l")
theme_override_styles/normal = SubResource("StyleBoxTexture_b6jmc")

[node name="HBoxContainer" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy"]
layout_mode = 2
anchor_left = 0.083
anchor_top = 0.289
anchor_right = 0.874
anchor_bottom = 0.629
offset_left = -0.0890007
offset_top = 0.0489998
offset_right = -0.141998
offset_bottom = -0.0110016
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 38
theme_override_styles/separator = SubResource("StyleBoxEmpty_58xa3")

[node name="Slot 1" type="VBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer/Slot 1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="WeaponName" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer/Slot 1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "Arcane Beacon"

[node name="Rarity" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer/Slot 1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "Legendary"

[node name="Price" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer/Slot 1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "18 монет"

[node name="VBoxContainer" type="VBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer/Slot 1"]
layout_mode = 2
size_flags_vertical = 6

[node name="Description" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot1/Slot_1_buy/HBoxContainer/Slot 1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "Светится фиолетовым, нестабильная энергия"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots"]
layout_mode = 2
theme_override_constants/separation = 13
theme_override_styles/separator = SubResource("StyleBoxEmpty_bnf11")

[node name="BuySlot2" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_gk8fi")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.195
anchor_top = 0.195
anchor_right = 0.816
anchor_bottom = 0.818
offset_left = 0.0349998
offset_top = -0.00500107
offset_right = 0.00799561
offset_bottom = -0.0619965
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rwfrm")
expand_mode = 1

[node name="Slot2_buy" type="Button" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.52
theme_override_styles/focus = SubResource("StyleBoxEmpty_y6mdk")
theme_override_styles/hover = SubResource("StyleBoxTexture_b6jmc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kt1kq")
theme_override_styles/normal = SubResource("StyleBoxTexture_b6jmc")

[node name="HBoxContainer" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy"]
layout_mode = 2
anchor_left = 0.083
anchor_top = 0.289
anchor_right = 0.874
anchor_bottom = 0.629
offset_left = -0.0890007
offset_top = 0.0489998
offset_right = -0.141998
offset_bottom = -0.0110016
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 38
theme_override_styles/separator = SubResource("StyleBoxEmpty_58xa3")

[node name="Slot 1" type="VBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer/Slot 1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="WeaponName" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer/Slot 1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "Arcane Beacon"

[node name="Rarity" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer/Slot 1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "Legendary"

[node name="Price" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer/Slot 1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "18 монет"

[node name="VBoxContainer" type="VBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer/Slot 1"]
layout_mode = 2
size_flags_vertical = 6

[node name="Description" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots/BuySlot2/Slot2_buy/HBoxContainer/Slot 1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 20
text = "Светится фиолетовым, нестабильная энергия"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Buy_slots"]
layout_mode = 2
theme_override_constants/separation = 13
theme_override_styles/separator = SubResource("StyleBoxEmpty_bnf11")

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_k4c67")

[node name="Stats" type="VBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_dquav")

[node name="Label" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 30
text = "STATS"
horizontal_alignment = 1

[node name="Health" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2

[node name="Max_health" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Health"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "MAX_HEALTH"

[node name="Value" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Health"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "1"

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Health"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_0ud5t")

[node name="Damage" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2

[node name="Damage" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Damage"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "stat_damage"

[node name="Value" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Damage"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "1"

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Damage"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_0ud5t")

[node name="AS" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2

[node name="AS" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/AS"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "stat_attack_speed"

[node name="Value" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/AS"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "1"

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats/AS"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_0ud5t")

[node name="Crit_chance" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2

[node name="Crit_chance" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Crit_chance"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "stat_crit_chance"

[node name="Value" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Crit_chance"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "1"

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Crit_chance"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_0ud5t")

[node name="Level" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2

[node name="Level" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Level"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "LEVEL"

[node name="Value" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Level"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "1"

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Level"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_0ud5t")

[node name="Experience" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2

[node name="Experience" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Experience"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "Experience"

[node name="Value" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Experience"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "1"

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Experience"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_0ud5t")

[node name="Gold" type="HBoxContainer" parent="Base/VBoxContainer/BuySlots and Stats/Stats"]
layout_mode = 2

[node name="Gold" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Gold"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "BALANCE"

[node name="Value" type="Label" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Gold"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "1"

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/BuySlots and Stats/Stats/Gold"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_0ud5t")

[node name="Inventory and Buttons" type="HBoxContainer" parent="Base/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="Base/VBoxContainer/Inventory and Buttons"]
layout_mode = 2
theme_override_constants/separation = 9
theme_override_styles/separator = SubResource("StyleBoxEmpty_jltga")

[node name="Inventory" type="VBoxContainer" parent="Base/VBoxContainer/Inventory and Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Base/VBoxContainer/Inventory and Buttons/Inventory"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 18
text = "INVENTORY"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Base/VBoxContainer/Inventory and Buttons/Inventory"]
layout_mode = 2
theme_override_constants/separation = 15
theme_override_styles/separator = SubResource("StyleBoxEmpty_cbg7m")

[node name="Inventory" type="HBoxContainer" parent="Base/VBoxContainer/Inventory and Buttons/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65

[node name="Slot1" parent="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory" instance=ExtResource("5_c6320")]
layout_mode = 2

[node name="Slot2" parent="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory" instance=ExtResource("5_c6320")]
layout_mode = 2

[node name="Slot 3" parent="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory" instance=ExtResource("5_c6320")]
layout_mode = 2

[node name="Slot4" parent="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory" instance=ExtResource("5_c6320")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Base/VBoxContainer/Inventory and Buttons/Inventory"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_cbg7m")

[node name="VSeparator2" type="VSeparator" parent="Base/VBoxContainer/Inventory and Buttons"]
layout_mode = 2
theme_override_constants/separation = 9
theme_override_styles/separator = SubResource("StyleBoxEmpty_jltga")

[node name="Buttons" type="VBoxContainer" parent="Base/VBoxContainer/Inventory and Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="Base/VBoxContainer/Inventory and Buttons/Buttons"]
layout_mode = 2
theme_override_constants/separation = 28
theme_override_styles/separator = SubResource("StyleBoxEmpty_r81lv")

[node name="Resume" type="Button" parent="Base/VBoxContainer/Inventory and Buttons/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxEmpty_rwmh5")
theme_override_styles/hover = SubResource("StyleBoxTexture_61ljt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rvstr")
theme_override_styles/normal = SubResource("StyleBoxTexture_8pfog")
text = "RESUME"

[node name="HSeparator2" type="HSeparator" parent="Base/VBoxContainer/Inventory and Buttons/Buttons"]
layout_mode = 2
theme_override_constants/separation = 13
theme_override_styles/separator = SubResource("StyleBoxEmpty_r81lv")

[node name="Save" type="Button" parent="Base/VBoxContainer/Inventory and Buttons/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxEmpty_rwmh5")
theme_override_styles/hover = SubResource("StyleBoxTexture_61ljt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rvstr")
theme_override_styles/normal = SubResource("StyleBoxTexture_8pfog")
text = "Save"

[node name="HSeparator4" type="HSeparator" parent="Base/VBoxContainer/Inventory and Buttons/Buttons"]
layout_mode = 2
theme_override_constants/separation = 13
theme_override_styles/separator = SubResource("StyleBoxEmpty_r81lv")

[node name="Exit" type="Button" parent="Base/VBoxContainer/Inventory and Buttons/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_bu623")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxEmpty_rwmh5")
theme_override_styles/hover = SubResource("StyleBoxTexture_61ljt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rvstr")
theme_override_styles/normal = SubResource("StyleBoxTexture_8pfog")
text = "EXIT"

[node name="HSeparator" type="HSeparator" parent="Base/VBoxContainer/Inventory and Buttons/Buttons"]
layout_mode = 2
theme_override_constants/separation = 44
theme_override_styles/separator = SubResource("StyleBoxEmpty_q4y7s")

[node name="VSeparator3" type="VSeparator" parent="Base/VBoxContainer/Inventory and Buttons"]
layout_mode = 2
theme_override_constants/separation = 9
theme_override_styles/separator = SubResource("StyleBoxEmpty_jltga")

[connection signal="inventory_changed" from="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory/Slot1" to="Base" method="populate_inventory_ui"]
[connection signal="inventory_changed" from="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory/Slot2" to="Base" method="populate_inventory_ui"]
[connection signal="inventory_changed" from="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory/Slot 3" to="Base" method="populate_inventory_ui"]
[connection signal="inventory_changed" from="Base/VBoxContainer/Inventory and Buttons/Inventory/Inventory/Slot4" to="Base" method="populate_inventory_ui"]
[connection signal="pressed" from="Base/VBoxContainer/Inventory and Buttons/Buttons/Resume" to="Base" method="_on_resume_pressed"]
[connection signal="pressed" from="Base/VBoxContainer/Inventory and Buttons/Buttons/Save" to="Base" method="_on_save_pressed"]
[connection signal="pressed" from="Base/VBoxContainer/Inventory and Buttons/Buttons/Exit" to="Base" method="_on_exit_pressed"]
